fixed buttons on mobile

--- a/styles/login_and_signup.css
+++ b/styles/login_and_signup.css
@@ -67,7 +67,8 @@
     border-radius: 10px;
     background-color: rgb(30, 30, 30);
     color: white;
-    border-color: rgb(30, 30, 30)
+    border-color: rgb(30, 30, 30);
+    margin-bottom: 1rem;
 }
 
 .center_item{
